<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/sub2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="419dp"
        android:ems="10"
        android:hint="@string/subject_2"
        android:backgroundTint="@color/black"
        android:minHeight="48dp"
        android:textColorHint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sub4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="303dp"
        android:ems="10"
        android:hint="@string/subject_4"
        android:textColor="@color/black"
        android:backgroundTint="@color/black"
        android:minHeight="48dp"
        android:textColorHint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/grade3"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="256dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="363dp"
        android:background="@android:drawable/btn_dropdown"
        android:contentDescription="@string/choose3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/grade2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="256dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="419dp"
        android:background="@android:drawable/btn_dropdown"
        android:contentDescription="@string/choose2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sub3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="363dp"
        android:ems="10"
        android:hint="@string/subject_3"
        android:textColor="@color/black"
        android:backgroundTint="@color/black"
        android:minHeight="48dp"
        android:textColorHint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sub6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="364dp"
        android:layout_marginBottom="191dp"
        android:ems="10"
        android:hint="@string/subject_6"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/primary"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/grade6"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="256dp"
        android:layout_marginTop="364dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="191dp"
        android:background="@android:drawable/btn_dropdown"
        android:contentDescription="@string/choose6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sub5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="247dp"
        android:ems="10"
        android:hint="@string/subject_5"
        android:minHeight="48dp"
        android:textColorHint="@color/primary"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <Spinner
        android:id="@+id/grade5"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="256dp"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="247dp"
        android:background="@android:drawable/btn_dropdown"
        android:contentDescription="@string/choose5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/grade1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="256dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="475dp"
        android:background="@android:drawable/btn_dropdown"
        android:contentDescription="@string/choose1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/grade4"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="256dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="303dp"
        android:background="@android:drawable/btn_dropdown"
        android:contentDescription="@string/choose4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sub1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="475dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/subject_1"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/gpa"
        android:layout_width="126dp"
        android:layout_height="41dp"
        android:layout_marginTop="436dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="126dp"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/gpaHint"
        android:minHeight="48dp"
        android:textColorHint="@color/primary"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sem"
        android:layout_width="165dp"
        android:layout_height="40dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="437dp"
        android:layout_marginBottom="126dp"
        android:ems="10"
        android:hint="@string/semHint"
        android:minHeight="48dp"
        android:textColorHint="@color/primary"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/regno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="539dp"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="10sp"
        android:ems="10"
        android:textColor="@color/black"
        android:backgroundTint="@color/black"
        android:hint="@string/register_number"
        android:minHeight="48dp"
        android:textColorHint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submit"
        android:layout_width="150dp"
        android:layout_height="27pt"
        android:layout_marginStart="131dp"
        android:layout_marginTop="487dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="53dp"
        android:text="@string/upload"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>