<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        tools:ignore="UselessParent">


        <TableRow
            android:background="@color/primary">
            <TextView
            android:id="@+id/title1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:padding="10sp"
            android:text="Semester"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

            <TextView
                android:id="@+id/title2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:padding="10sp"
                android:text="@string/col1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/title3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/col2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:padding="10sp"
                android:textSize="18sp"
                android:layout_weight="2"
                android:layout_gravity="center"/>

        </TableRow>

        <TableRow
            android:background="#DAE8FC"
            android:paddingTop="10sp">
            <TextView
                android:id="@+id/sem1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="sem"
                android:textAlignment="center"
                android:padding="10sp"
                android:textSize="16sp"
                android:layout_weight="2"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/sub1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/code1"
                android:textAlignment="center"
                android:padding="10sp"
                android:textSize="16sp"
                android:layout_weight="2"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/grade1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/mark1"
                android:textAlignment="center"
                android:padding="10sp"
                android:textSize="16sp"
                android:layout_weight="2"
                android:layout_gravity="center"/>
        </TableRow>

        <TableRow
            android:background="#DAE8FC"
            android:paddingTop="10sp">
            <TextView
                android:id="@+id/sem2"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="sem"
                android:textAlignment="center"
                android:padding="10sp"
                android:textSize="16sp"
                android:layout_weight="2"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/sub2"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/code2"
                android:textAlignment="center"
                android:padding="10sp"
                android:textSize="16sp"
                android:layout_weight="2"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/grade2"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/mark2"
                android:padding="10sp"
                android:textSize="16sp"
                android:layout_weight="2"
                android:layout_gravity="center"/>

        </TableRow>
        <TableRow
            android:background="#DAE8FC"
            android:paddingTop="10sp">
            <TextView
                android:id="@+id/sem3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="sem"
                android:textAlignment="center"
                android:padding="10sp"
                android:textSize="16sp"
                android:layout_weight="2"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/sub3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/code3"
                android:textAlignment="center"
                android:padding="10sp"
                android:textSize="16sp"
                android:layout_weight="2"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/grade3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/mark3"
                android:textAlignment="center"
                android:padding="10sp"
                android:textSize="16sp"
                android:layout_weight="2"
                android:layout_gravity="center"/>


        </TableRow>
        <TableRow
            android:background="#DAE8FC"
            android:paddingTop="10sp">
            <TextView
                android:id="@+id/sem4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="sem"
                android:textAlignment="center"
                android:padding="10sp"
                android:textSize="16sp"
                android:layout_weight="2"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/sub4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/code4"
                android:textAlignment="center"
                android:padding="10sp"
                android:textSize="16sp"
                android:layout_weight="2"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/grade4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/mark4"
                android:textAlignment="center"
                android:padding="10sp"
                android:textSize="16sp"
                android:layout_weight="2"
                android:layout_gravity="center"/>
        </TableRow>
        <TableRow
            android:background="#DAE8FC"
            android:paddingTop="10sp">
            <TextView
                android:id="@+id/sem5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="sem"
                android:textAlignment="center"
                android:padding="10sp"
                android:textSize="16sp"
                android:layout_weight="2"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/sub5"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/code5"
                android:textAlignment="center"
                android:padding="10sp"
                android:textSize="16sp"
                android:layout_weight="2"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/grade5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/mark5"
                android:textAlignment="center"
                android:padding="10sp"
                android:textSize="16sp"
                android:layout_weight="2"
                android:layout_gravity="center"/>

        </TableRow>
        <TableRow
            android:background="#DAE8FC"
            android:paddingTop="10sp">
            <TextView
                android:id="@+id/sem6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="sem"
                android:textAlignment="center"
                android:padding="10sp"
                android:textSize="16sp"
                android:layout_weight="2"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/sub6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/code6"
                android:textAlignment="center"
                android:padding="10sp"
                android:textSize="16sp"
                android:layout_weight="2"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/grade6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/mark6"
                android:textAlignment="center"
                android:padding="10sp"
                android:textSize="16sp"
                android:layout_weight="2"
                android:layout_gravity="center"/>
        </TableRow>
        <TableRow
            android:background="#DAE8FC"
            android:paddingTop="10sp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/GPA"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="16sp"
                android:layout_weight="2"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/gpa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:padding="10sp"
                android:text="@string/gpa"
                android:textAlignment="center"
                android:textSize="16sp" />
        </TableRow>

    </TableLayout>

</RelativeLayout>